registration and auth front-end, raw version

--- a/app/index.html
+++ b/app/index.html
@@ -86,6 +86,9 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/services/promise.service.js"></script>
         <script src="scripts/controllers/promise.controller.js"></script>
+        <script src="scripts/services/auth.service.js"></script>
+        <script src="scripts/controllers/login.controller.js"></script>
+        <script src="scripts/controllers/signup.controller.js"></script>
         <!-- endbuild -->
 </body>
 </html>
