layout login/register form

--- a/app/index.html
+++ b/app/index.html
@@ -21,31 +21,8 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="header">
-      <div class="navbar navbar-default" role="navigation">
-        <div class="container">
-          <div class="navbar-header">
-
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-          </div>
-
-          <div class="collapse navbar-collapse" id="js-navbar-collapse">
-
-            <ul class="nav navbar-nav">
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="container">
+    
     <div ng-view=""></div>
-    </div>
 
     <div class="footer">
       <div class="container">
@@ -89,6 +66,7 @@
         <script src="scripts/services/auth.service.js"></script>
         <script src="scripts/controllers/login.controller.js"></script>
         <script src="scripts/controllers/signup.controller.js"></script>
+        <script src="scripts/controllers/logout.controller.js"></script>
         <!-- endbuild -->
 </body>
 </html>
