--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
 
     <!-- Add your site or application content here -->
 
-    <div ng-view=""></div>
+    <div ui-view></div>
 
     <div class="footer">
       <div class="container">
@@ -55,6 +55,7 @@
     <script src="bower_components/angular-mocks/angular-mocks.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/angular-xeditable/dist/js/xeditable.js"></script>
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
