--- a/app/index.html
+++ b/app/index.html
@@ -67,6 +67,7 @@
         <script src="scripts/services/auth.service.js"></script>
         <script src="scripts/controllers/login.controller.js"></script>
         <script src="scripts/controllers/signup.controller.js"></script>
+        <script src="scripts/controllers/user.js"></script>
         <!-- endbuild -->
 </body>
 </html>
