--- a/app/index.html
+++ b/app/index.html
@@ -69,6 +69,7 @@
         <script src="scripts/controllers/signup.controller.js"></script>
         <script src="scripts/controllers/user.controller.js"></script>
         <script src="scripts/services/user.service.js"></script>
+        <script src="scripts/controllers/public.controller.js"></script>
         <!-- endbuild -->
 </body>
 </html>
