--- a/app/index.html
+++ b/app/index.html
@@ -71,6 +71,7 @@
         <script src="scripts/controllers/user.controller.js"></script>
         <script src="scripts/services/user.service.js"></script>
         <script src="scripts/controllers/public.controller.js"></script>
+        <script src="scripts/controllers/archive.controller.js"></script>
         <!-- endbuild -->
 </body>
 </html>
